# XiHe_esp_480

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/espressif__esp_jpeg/tjpgd/: tjpgd.c
components/gt911.c/: CMakeLists.txt  gt911.c
components/gt911.c/include/: gt911.h
components/lvgl/: lv_conf.h
components/lvgl/demos/: lv_demos.h
components/lvgl_esp32_drivers/: lvgl_helpers.h
main/: CMakeLists.txt  XiheClient.cpp  XiheClient.h  idf_component.yml  main.cpp
main/FEC/: FEC2DTable.cpp  FECDecoder.cpp
main/Gui/: GuiManager.cpp  GuiManager.h
main/Lcd/: lcd.c  lcd.h
main/RTPParser/: MJPEGRTPParser.cpp
main/RTSPClient/: RTSPClient.h
main/WIFi/: WIFiAdapter.cpp  WIFiAdapter.h
