idf_component_register(SRCS
    "./Lcd/lcd.c" 
	"./custom/custom.c"
	"./generated/guider_fonts/lv_font_montserratMedium_12.c"
	"./generated/guider_fonts/lv_font_montserratMedium_16.c"
	"./generated/guider_fonts/lv_font_subset4_70.c"
	"./generated/images/_aurora_480x272.c"
	"./generated/events_init.c"
	"./generated/gui_guider.c"
	"./generated/setup_scr_LoginWin.c"
	"./generated/setup_scr_PlayWin.c"
	"./generated/widgets_init.c"
	"./Gui/GuiManager.cpp"
	"./CommonTools/ExBuff.cpp"
	"./CommonTools/FlexibleBuff.cpp"
	"./CommonTools/RtspParser.cpp"
	"./CommonTools/SdpParser.cpp"
	"./CommonTools/SignalObject.cpp"
	"./CommonTools/TimeCounter.cpp"
	"./Log/Log.cpp"
	"./RTPParser/H264RTPParser.cpp"
	"./RTPParser/MJPEGRTPParser.cpp"
	"./RTSPClient/RTSPClient.cpp"
	"./FEC/FEC2DTable.cpp"
	"./FEC/FECDecoder.cpp"
	"./FEC/FECEncoder.cpp"
	"./FEC/FECEncoder.cpp"
	"./WIFi/WIFiAdapter.cpp"
	"XiheClient.cpp"
    "main.cpp"
    INCLUDE_DIRS
	"." 
	"./Lcd"
	"./Gui"
	"./custom"
	"./generated"
	"./CommonTools"
	"./RTPParser"
	"./RTSPClient"
	"./Log"
	"./FEC"
	"./WIFi")
